Added better error handling and redirects

--- a/pickles/templates/pickles/new_pickle.html
+++ b/pickles/templates/pickles/new_pickle.html
@@ -34,7 +34,8 @@
                     element.setAttribute('value', pm);
                     dataList.appendChild(element);
                 });
-            });
+            })
+            .catch(err => console.log(err));
         </script>
     </body>
 </html>
