--- a/pickles/templates/pickles/pickle.html
+++ b/pickles/templates/pickles/pickle.html
@@ -4,6 +4,15 @@
         <title>Pickle: {{ pickle.name }}</title>
     </head>
     <body>
+        <nav>
+            <ul>
+                <li><a href="{% url 'new pickle' %}">New Pickle</a></li>
+                <li><a href="">New Review</a></li>
+                <li><a href="">Recommended Pickles</a></li>
+                <li><a href="">Your Pickles</a></li>
+            </ul>
+        </nav>
+
         <p>Pickle: {{ pickle.name }}</p>
         <p>Manufacturer: {{ pickle.maker }}</p>
         <p>Added Date: {{ pickle.created_date }}</p>
