--- a/pickles/templates/pickles/all_pickles.html
+++ b/pickles/templates/pickles/all_pickles.html
@@ -26,15 +26,29 @@
         <table>
             <thead>
                 <th>Pickle</th>
-            </thead>>
+            </thead>
             <tbody>
-        {% for pickle in all_pickles %}
+        {% for pickle in page_obj %}
                 <tr>
                     <td><a href="{% url 'pickles:pickle' pickle.id %}">{{ pickle.name }}</a></td>
                 </tr> 
         {% endfor %}
             </tbody>
         </table>
-        
+        <div class="pagination">
+            <span class="step-links">
+                {% if page_obj.has_previous %}
+                    <a href="?page=1">&laquo; first</a>
+                    <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+                {% endif %}
+                <span class="current">
+                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                </span>
+                {% if page_obj.has_next %}
+                    <a href="?page={{ page_obj.next_page_number }}">next</a>
+                    <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                {% endif %}
+            </span>
+        </div>
     </body>
 </html>
