Fixed table styling that was driving me crazy

--- a/pickles/templates/pickles/all_pickles.html
+++ b/pickles/templates/pickles/all_pickles.html
@@ -4,6 +4,7 @@
         <title>All Pickle</title>
         {% load static %}
         <link rel="stylesheet" href="{% static 'css/mini-css/3.0.1/mini-default.min.css' %}" />
+        <link rel="stylesheet" href="{% static 'css/default.css' %}" />
     </head>
     <body>
         <label for="drawer-control" class="button drawer-toggle persistent doc"></label>
