--- a/pickles/templates/pickles/all_pickles.html
+++ b/pickles/templates/pickles/all_pickles.html
@@ -5,25 +5,10 @@
         {% load static %}
         <link rel="stylesheet" href="{% static 'css/mini-css/3.0.1/mini-default.min.css' %}" />
         <link rel="stylesheet" href="{% static 'css/default.css' %}" />
+        <script src="{% static 'js/mx-menu.js' %}" type="module"></script>
     </head>
     <body>
-        <label for="drawer-control" class="button drawer-toggle persistent doc"></label>
-        <input type="checkbox" id="drawer-control" class="drawer persistent">
-        <div>
-            <label for="drawer-control" class="drawer-close"></label>
-            <div>
-                    <a href="{% url 'pickles:new pickle' %}">New Pickle</a>
-            </div>
-            <div>
-                <a href="">New Review</a>
-            </div>
-            <div>
-                <a href="">Recommended Pickles</a>
-            </div>
-            <div>
-                <a href="">Your Pickles</a>
-            </div>
-        </div>
+        <mx-menu></mx-menu>
         <table>
             <thead>
                 <th>Pickle</th>
