--- a/pickles/templates/pickles/new_review.html
+++ b/pickles/templates/pickles/new_review.html
@@ -8,7 +8,7 @@
         {% load static %}
         <link rel="stylesheet" href="{% static 'css/mini-css/3.0.1/mini-default.min.css' %}" />
         <script src="{% static 'js/mx-menu.js' %}" type="module"></script>
-        <script src="{% static 'js/mx-inputsearch.js' %}" type="module"></script>
+        <script src="{% static 'js/mx-select.js' %}" type="module"></script>
     </head>
     <body>
         <mx-menu></mx-menu>
@@ -16,10 +16,7 @@
             {% csrf_token %}
             <fieldset>
                 <legend><h2>New Review</h2></legend>
-                <div class="input-group vertical">
-                    <label for="pickle">Pickle</label>
-                    <select name="pickle" id="pickle_list"></select>
-                </div>
+                <mx-select mxName="pickle_list" mxLabel="Pickle" endpoint="{% url 'pickles:get all' %}"></mx-select>
                 <div class="input-group vertical">
                     <label for="pickle_rating">Rating</label>
                     <input type="range" min="0" max="10" id="pickle_rating" name="pickle_rating">
@@ -35,24 +32,6 @@
             </fieldset>
             <input type="submit" value="Add New Review" class="primary">
         </form>
-        <script>
-            // http://accuratesearch.org/#about
-            window.addEventListener('load', async (event) => {
-                try {
-                    const result = await fetch("{% url 'pickles:get all' %}");
-                    const pickles = await result.json();
-                    pickles.sort((a, b) => a.name.localeCompare(b.name));
-                    const list = document.getElementById('pickle_list');
-                    pickles.forEach(element => {
-                        const option = document.createElement('option'); 
-                        option.setAttribute('value', element.id);
-                        option.appendChild(document.createTextNode(element.name));
-                        list.appendChild(option);
-                    });
-                } catch(e) {
-                    console.error(e);
-                }
-            });
-        </script>
+        <!-- http://accuratesearch.org/#about -->
     </body>
 </html>
